...
                                    <color key="backgroundColor" red="0.47058823529999999" green="0.63529411759999999" blue="0.71204255760000001" alpha="1" colorSpace="calibratedRGB"/>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="BPB-b9-845" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="pn5-gg-Cwc"/>
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Timetable" id="fft-Df-DLC">
                                <rect key="frame" x="0.0" y="90" width="600" height="46"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fft-Df-DLC" id="ACF-fn-FYh">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
...
                                    <color key="backgroundColor" red="0.47058823529999999" green="0.63529411759999999" blue="0.71204255760000001" alpha="1" colorSpace="calibratedRGB"/>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="E8I-kc-PKa" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="QGR-WY-wp3"/>
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Results" id="g7n-oZ-37v">
                                <rect key="frame" x="0.0" y="274" width="600" height="46"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g7n-oZ-37v" id="HXZ-CV-sgn">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
...
                                <rect key="frame" x="0.0" y="320" width="600" height="46"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FbL-fd-PIi" id="nsw-8F-DCq">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="45"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="People Search" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICl-K0-qLS">
                                            <rect key="frame" x="51" y="15" width="209" height="21"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="search" translatesAutoresizingMaskIntoConstraints="NO" id="uth-94-pms">
...
                            <outlet property="dataSource" destination="ZMO-Jx-ghK" id="Pdu-MY-9hJ"/>
                            <outlet property="delegate" destination="ZMO-Jx-ghK" id="NmQ-67-Yhq"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Subject details" id="E6Z-TX-RGr" userLabel="Subject details">
                        <barButtonItem key="rightBarButtonItem" image="cancel" id="qwU-8a-OVW">
                            <color key="tintColor" red="0.22352941179999999" green="0.23921568630000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="close:" destination="ZMO-Jx-ghK" id="1tn-bj-knu"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
