...
    private let tableRefreshControl = UIRefreshControl()
    var childFuncBeforeShowSideMenu: () -> () = {}
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.backgroundColor = TableViewBackgroundColor
        menuButton = UIBarButtonItem(image: UIImage(named: "menu"), style: UIBarButtonItemStyle.Plain, target: nil, action: nil)
        menuButton.tintColor = MenuButtonTintColor
        if self.revealViewController() != nil {
            menuButton.target = self
            menuButton.action = "menuButtonPressed"
            self.view.addGestureRecognizer(self.revealViewController().panGestureRecognizer())
        }
...
