...
let teacherString = NSLocalizedString("Teacher: ", comment: "teacher")
let emailString = NSLocalizedString("Email: ", comment: "email")
let personalNumberString = NSLocalizedString("Personal number: ", comment: "personal number")
let yesString = NSLocalizedString("Yes", comment: "yes")
let noString = NSLocalizedString("No", comment: "no")
let downloadLanguageString = NSLocalizedString("Download language: ", comment: "download language")
let typeToStartString = NSLocalizedString("type to start", comment: "type to start")
let creditsEnrolledString = NSLocalizedString("Credits enrolled: ", comment: "credits enrolled")
let creditsObtained = NSLocalizedString("Credits obtained: ", comment: "credits obtained")
let totalEnrolled = NSLocalizedString("Total enrolled: ", comment: "total enrolled")
let totalObtained = NSLocalizedString("Total obtained: ", comment: "total obtained")
let selectSubjectString = NSLocalizedString("Please select subject", comment: "select subject")
let descriptionString = NSLocalizedString("Description", comment: "description")
...
